En el link menu, remplace el texto "Inicio" por "putta"

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
                 <div class="link-content">
-                    <a href="#" class="activo1">Inicio</a>
+                    <a href="#" class="activo1">PUTTA</a>
                     <a href="#">Tienda</a>
                     <a href="#">Acerca de Nosotros</a>
                     <a href="#">Cantactos</a>
