se creo lo que es el footer y se le agrego a todas las sub-paginas

--- a/html/tienda-2.html
+++ b/html/tienda-2.html
@@ -390,6 +390,45 @@
 
 
 
+
+
+<footer>
+    <div class="content-fr-1">
+        <img src="../img/mtr_logo_black.png" alt="Logo de MiTienditaRizada">
+        <!-- <p class="text-name">Mi Tiendita Rizada</p>
+        <p class="country-text">Santo Domingo - Republica Dominicana</p> -->
+        <p class="cr-text">© 2020 - Mi MiTienditaRizada</p>
+    </div>
+
+    <div class="content-fr-2">
+        <h3 class="menu-text">Menu</h3>
+        <div class="link-content-fr">
+            <a href="#" class="activo">Inicio</a>
+            <a href="../html/tienda.html">Tienda</a>
+            <a href="#">Cantactos</a>
+        </div>
+    </div>
+
+    <div class="content-fr-3">
+        <div class="contact-content">
+            <h3 class="contact-text">Contactos</h3>
+                <p>Num. Telefono: +1 809-217-7090</p>
+                <p class="email-text">E-Mail: contacto@mitienditarizada.com</p>
+        </div>
+
+        <div class="social-content">
+            <h3 class="social-tittle">Redes Sociales</h3>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-facebook-f"></i></a>
+        </div>
+    </div>
+</footer>
+
+
+
+
+
+
     <script src="../js/tienda.js"></script>
     <script src='https://kit.fontawesome.com/c2095a4c17.js' crossorigin='anonymous'></script>
 </body>
