--- a/index.html
+++ b/index.html
@@ -13,38 +13,45 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500;600&display=swap" rel="stylesheet">
 
+
+
 </head>
 
 <body>
+
     <p class="small-paragraph"><span class="small-span"><a href="https://api.whatsapp.com/send?phone=18092177099&text=Hola%20Wilson.%20Deseo%20m%C3%A1s%20informaci%C3%B3n%20de%20Sistema%20TDC.">Whatsapp: 80544844545</a></span> Orgullosamente Dominicana</p>
 
-    <header class="header-content">
 
+
+<header>
+
+    <div class="menu-bar">
+        <!-- <button >menu</button> -->
+        <i id="btn-bar" class="btn-bar-style fas fa-bars"></i>
+    </div>
+
+
+    <div class="content-menu">
+        <div class="logo-menu">
+            <img src="./img/mitienditarizadalogo.png" alt="Logo de Mi Tiendita Rizada">
+        </div>
+    
+    
         <nav>
-
-        <img class="img-logotipo" src="./img/logo_mtr_header.png" alt="Logo TIpo de MiTienditaRizada">
- 
-
-            <div class="content">
-
-                <div class="btn-menu-rp-content"><a class="btn-menu" href="#"><i class="fas fa-bars"></i></a> </div>
-
-
-
-                <div class="link-content">
-                    <a href="#" class="activo">Inicio</a>
-                    <a href="./html/tienda.html">Tienda</a>
-                    <a href="#">Cantactos</a>
-                </div>
-
-
-            </div>
-
-
-            <hr class="hr-header">
-
+            <a href="index.html">INICIO</a>
+            <a href="./html/tienda.html">TIENDA</a>
+            <a href="#">CONTACTANOS</a>
+            <a href="#">SOBRE NOSOTROS</a>
         </nav>
-    </header>
+    </div>
+
+</header>
+
+
+
+
+
+
 
 
     <div class="slider-one">
@@ -279,10 +286,11 @@
 
 
     <script src="https://kit.fontawesome.com/c2095a4c17.js" crossorigin="anonymous"></script>
-    <script src="./js/main.js"></script>
 
 
 </body>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="./js/main.js"></script>
 
 </html>
