--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 <header>
 
     <div class="menu-bar">
-        <!-- <button >menu</button> -->
         <i id="btn-bar" class="btn-bar-style fas fa-bars"></i>
     </div>
 
@@ -252,7 +251,7 @@
 
 <footer>
     <div class="content-fr-1">
-        <img src="./img/mtr_logo_black.png" alt="Logo de MiTienditaRizada">
+        <img src="./img/mitienditarizadalogo.png" alt="Logo de MiTienditaRizada">
         <!-- <p class="text-name">Mi Tiendita Rizada</p>
         <p class="country-text">Santo Domingo - Republica Dominicana</p> -->
         <p class="cr-text">© 2020 - Mi MiTienditaRizada</p>
